# 2D-renderer-cpp

./: .gitignore  CMakeLists.txt  idf_component.yml  partitions.csv  sdkconfig  sdkconfig.old  upload_asset.py
.github/workflows/: main.yml
desktop/: CMakeLists.txt  main.cpp
include/: Collider.hpp  DrawUtils.hpp  Profiler.hpp  Renderer.hpp  Texture.hpp  Utils.hpp
include/Font/: Font.hpp
include/Shapes/: Circle.hpp  Collection.hpp  LineSegment.hpp  Point.hpp  Polygon.hpp  Rectangle.hpp  RegularPolygon.hpp  Shape.hpp
include/examples/: CollisionTest.hpp  LittlefsTest.hpp  Platformer.hpp  SolarSystem.hpp  TestShapes.hpp  TextExample.hpp
main/: CMakeLists.txt  component.mk  main.cpp
main/examples/: CollisionTest.cpp  Fire.cpp  LittlefsTest.cpp  Platformer.cpp  SolarSystem.cpp  SpaceShooter.cpp  TestShapes.cpp  TextExample.cpp  TextureTest.cpp
main/include/: Collider.hpp  Profiler.hpp  Renderer.hpp  Texture.hpp  Utils.hpp
main/include/Shapes/: Circle.hpp  Collection.hpp  LineSegment.hpp  Point.hpp  Polygon.hpp  Rectangle.hpp  RegularPolygon.hpp  Shape.hpp
main/include/examples/: Fire.hpp  SpaceShooter.hpp  TextureTest.hpp
main/src/: Collider.cpp  Font.cpp  Renderer.cpp  Texture.cpp  Utils.cpp
main/src/Shapes/: Circle.cpp  Collection.cpp  LineSegment.cpp  Point.cpp  Polygon.cpp  Rectangle.cpp  RegularPolygon.cpp  Shape.cpp
src/: Collider.cpp  DrawUtils.cpp  Font.cpp  Profiler.cpp  Renderer.cpp  Texture.cpp  Utils.cpp
src/Fonts/: TomThumb.h
src/Shapes/: Circle.cpp  Collection.cpp  LineSegment.cpp  Point.cpp  Polygon.cpp  Rectangle.cpp  RegularPolygon.cpp  Shape.cpp
standalone/: CMakeLists.txt  sdkconfig  sdkconfig.old
standalone/main/: CMakeLists.txt  idf_component.yml  main.cpp
standalone/main/examples/: CollisionTest.cpp  Platformer.cpp
